objects/Building__c/Building__c.object-meta.xml
<CustomObject>
    <description>住所や外観写真など、部屋が変わっても変わらない情報の集約。</description>
    <label>物件</label>
    <nameField>
        <label>物件名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>