objects/Building__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>地図コンポーネント用</description>
    <label>住所</label>
    <type>Address</type>
</CustomField>