objects/Building__c/fields/BuildingDescription_AI__c.field-meta.xml
<CustomField>
    <fullName>BuildingDescription_AI__c</fullName>
    <inlineHelpText>Agentforce検索用（例：「閑静な住宅街にあり、高級感のあるエントランスが特徴...」）</inlineHelpText>
    <label>AI用 物件解説</label>
    <type>TextArea</type>
</CustomField>