objects/Building__c/fields/BuiltYear__c.field-meta.xml
<CustomField>
    <fullName>BuiltYear__c</fullName>
    <label>築年数</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>