objects/Building__c/fields/ExteriorImageContentsKey__c.field-meta.xml
<CustomField>
    <fullName>ExteriorImageContentsKey__c</fullName>
    <description>CMSのマニュフェストキーまたはコンテンツキーを格納</description>
    <inlineHelpText>MCXXXXXXXXXXXXXXXX</inlineHelpText>
    <label>外観写真コンテンツキー</label>
    <length>255</length>
    <type>Text</type>
</CustomField>