objects/Building__c/fields/NearestStation__c.field-meta.xml
<CustomField>
    <fullName>NearestStation__c</fullName>
    <label>最寄駅</label>
    <length>255</length>
    <type>Text</type>
</CustomField>