objects/Building__c/fields/WalkMinutes__c.field-meta.xml
<CustomField>
    <fullName>WalkMinutes__c</fullName>
    <label>徒歩分数</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>