objects/Building__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Address__StateCode__s</columns>
    <columns>Address__City__s</columns>
    <columns>Address__Street__s</columns>
    <columns>BuiltYear__c</columns>
    <columns>NearestStation__c</columns>
    <columns>WalkMinutes__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>